[gd_scene load_steps=44 format=2]

[ext_resource path="res://images/game-brick_wall-800x600.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/title.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Fiddums Family.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/time_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/game.gd" type="Script" id=5]
[ext_resource path="res://images/brick_wall-600x600.jpg" type="Texture" id=6]
[ext_resource path="res://scenes/game_default_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/monochrome.tres" type="Material" id=8]
[ext_resource path="res://scenes/button_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://fonts/TerminusTTF-4.47.0.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://fonts/TerminusTTF-Bold-4.47.0.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://fonts/TerminusTTF-Italic-4.47.0.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://fonts/TerminusTTF-Bold Italic-4.47.0.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://scripts/demon.gd" type="Script" id=14]
[ext_resource path="res://images/demon_0.png" type="Texture" id=15]
[ext_resource path="res://sounds/music/subdue.ogg" type="AudioStream" id=16]
[ext_resource path="res://sounds/music/Battle Theme.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/music/smallheart.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/music/Ancient Apparitions by marcelofg55.ogg" type="AudioStream" id=19]
[ext_resource path="res://sounds/music/Horror Cinematic by bariq18.wav" type="AudioStream" id=20]
[ext_resource path="res://sounds/music/Is this supposed to be here.ogg" type="AudioStream" id=21]
[ext_resource path="res://sounds/music/Shattered souls.wav" type="AudioStream" id=22]
[ext_resource path="res://sounds/music/corner-of-the-mind.wav" type="AudioStream" id=23]
[ext_resource path="res://sounds/effects/bad answer rumbling.wav" type="AudioStream" id=24]
[ext_resource path="res://sounds/effects/Earth Element Magic Spell.ogg" type="AudioStream" id=25]
[ext_resource path="res://sounds/effects/short rumbling.wav" type="AudioStream" id=26]
[ext_resource path="res://sounds/effects/invincibility_off.wav" type="AudioStream" id=27]
[ext_resource path="res://sounds/effects/Socapex - big punch.wav" type="AudioStream" id=28]
[ext_resource path="res://sounds/effects/invincibility_on.wav" type="AudioStream" id=29]
[ext_resource path="res://sounds/effects/Magic Shield by spookymodem.wav" type="AudioStream" id=30]
[ext_resource path="res://sounds/effects/Socapex - hurt.wav" type="AudioStream" id=31]
[ext_resource path="res://sounds/effects/Socapex - small knock.wav" type="AudioStream" id=32]
[ext_resource path="res://fonts/Courier Prime Bold.ttf" type="DynamicFontData" id=33]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 33 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("demon/battle_screen/image:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("demon/battle_screen/background:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.901961, 0.901961, 0.901961, 0.0901961 ), Color( 0.901961, 0, 0, 0.0901961 ), Color( 0.901961, 0.901961, 0.901961, 0.0901961 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("demon/battle_screen:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.176777, 0.225312 ),
"update": 0,
"values": [ Vector2( 0, -600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("demon/battle_screen/background:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.901961, 0.901961, 0.901961, 0.0901961 ), Color( 0.901961, 0, 0.901961, 0.0901961 ), Color( 0.901961, 0.901961, 0.901961, 0.0901961 ) ]
}

[node name="game" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": "main game"
}
mental_drop = 1
demon_spawn = 23

[node name="non_interactive" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="non_interactive"]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loc_bg" type="ColorRect" parent="non_interactive"]
margin_left = 621.0
margin_top = 72.0
margin_right = 784.0
margin_bottom = 96.0
color = Color( 0.196078, 0.160784, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loc_label" type="Label" parent="non_interactive"]
margin_left = 621.0
margin_top = 72.0
margin_right = 717.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "location:"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="location" type="Label" parent="non_interactive"]
margin_left = 717.0
margin_top = 72.0
margin_right = 784.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "CENTER"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="non_interactive"]
margin_left = 464.0
margin_top = 100.0
margin_right = 784.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" parent="non_interactive" instance=ExtResource( 2 )]

[node name="time_block" type="Control" parent="non_interactive"]
margin_left = 16.0
margin_top = 100.0
margin_right = 166.0
margin_bottom = 250.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="order" type="VBoxContainer" parent="non_interactive/time_block"]
margin_right = 150.0
margin_bottom = 150.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="non_interactive/time_block/order"]
margin_right = 150.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "time"
align = 1
valign = 1

[node name="time" type="Label" parent="non_interactive/time_block/order"]
margin_top = 75.0
margin_right = 150.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.878431, 0.282353, 0.368627, 1 )
text = "00:00"
align = 1
valign = 1

[node name="monochrome" type="ColorRect" parent="non_interactive"]
visible = false
material = ExtResource( 8 )
margin_right = 800.0
margin_bottom = 600.0

[node name="char_info" type="Control" parent="non_interactive"]
margin_left = 16.0
margin_top = 256.0
margin_right = 166.0
margin_bottom = 584.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="non_interactive/char_info"]
margin_right = 150.0
margin_bottom = 328.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order" type="VBoxContainer" parent="non_interactive/char_info"]
margin_left = 4.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chara_name" type="Label" parent="non_interactive/char_info/order"]
margin_right = 142.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "name: John"

[node name="physical_health" type="Label" parent="non_interactive/char_info/order"]
margin_top = 22.0
margin_right = 142.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "physical: 000"

[node name="mind_health" type="Label" parent="non_interactive/char_info/order"]
margin_top = 44.0
margin_right = 142.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "mind: 000"

[node name="invincible" type="Label" parent="non_interactive/char_info/order"]
margin_top = 66.0
margin_right = 142.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 7 )
text = "invinci: off"

[node name="used_invinci" type="Label" parent="non_interactive/char_info/order"]
margin_top = 88.0
margin_right = 142.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 7 )
text = "used: False"

[node name="sequence" type="Label" parent="non_interactive/char_info/order"]
margin_top = 110.0
margin_right = 142.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 7 )
text = "[]"

[node name="goal" type="Control" parent="non_interactive/char_info"]
margin_left = 4.0
margin_top = 164.0
margin_right = 146.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="non_interactive/char_info/goal"]
margin_right = 142.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 7 )
text = "goal:"

[node name="description" type="RichTextLabel" parent="non_interactive/char_info/goal"]
margin_top = 18.0
margin_right = 142.0
margin_bottom = 236.0
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texts" type="Control" parent="non_interactive"]
margin_left = 174.0
margin_top = 100.0
margin_right = 448.0
margin_bottom = 420.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="history_color" type="ColorRect" parent="non_interactive/texts"]
margin_right = 274.0
margin_bottom = 140.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="history" type="RichTextLabel" parent="non_interactive/texts/history_color"]
margin_left = 4.0
margin_top = 4.0
margin_right = 274.0
margin_bottom = 136.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "this is the history of previous texts."
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description_color" type="ColorRect" parent="non_interactive/texts"]
margin_top = 156.0
margin_right = 274.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="description" type="RichTextLabel" parent="non_interactive/texts/description_color"]
margin_left = 4.0
margin_top = 4.0
margin_right = 274.0
margin_bottom = 160.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "this is the description of a scene."
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="continue" type="Label" parent="non_interactive/texts/description_color"]
margin_left = 4.0
margin_top = 132.0
margin_right = 270.0
margin_bottom = 160.0
text = "Press the left mouse button to continue"
align = 2
valign = 1

[node name="interactive" type="Control" parent="."]
margin_top = 416.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="interactive"]
margin_left = 174.0
margin_top = 20.0
margin_right = 784.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order" type="VBoxContainer" parent="interactive/buttons"]
margin_left = 4.0
margin_top = 4.0
margin_right = 606.0
margin_bottom = 144.0

[node name="option1" type="Button" parent="interactive/buttons/order"]
margin_right = 602.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 9 )
disabled = true

[node name="option2" type="Button" parent="interactive/buttons/order"]
margin_top = 27.0
margin_right = 602.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 9 )
disabled = true

[node name="option3" type="Button" parent="interactive/buttons/order"]
margin_top = 54.0
margin_right = 602.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 9 )
disabled = true

[node name="option4" type="Button" parent="interactive/buttons/order"]
margin_top = 81.0
margin_right = 602.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 9 )
disabled = true

[node name="demon" type="Node" parent="."]
script = ExtResource( 14 )

[node name="battle_screen" type="Control" parent="demon"]
margin_top = -600.0
margin_right = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="demon/battle_screen"]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0.901961, 0.901961, 0.901961, 0.0901961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image" type="TextureRect" parent="demon/battle_screen"]
margin_left = 200.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 420.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="demon/battle_screen"]
margin_left = 200.0
margin_top = 440.0
margin_right = 600.0
margin_bottom = 600.0

[node name="order" type="VBoxContainer" parent="demon/battle_screen/buttons"]
margin_right = 400.0
margin_bottom = 160.0

[node name="attack" type="Button" parent="demon/battle_screen/buttons/order"]
margin_right = 400.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 9 )
disabled = true
text = "Attack with a hammer."

[node name="defend" type="Button" parent="demon/battle_screen/buttons/order"]
margin_top = 27.0
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 9 )
disabled = true
text = "Defend with an amulet."

[node name="invincible" type="Button" parent="demon/battle_screen/buttons/order"]
margin_top = 54.0
margin_right = 400.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 9 )
disabled = true
text = "Give yourself invincibility."

[node name="soundtrack" type="Node" parent="."]

[node name="prologue_music" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 16 )

[node name="game_music" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 21 )

[node name="battle_music" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 17 )

[node name="ending_1" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 19 )

[node name="ending_2" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 23 )

[node name="ending_3" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 20 )

[node name="ending_4" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 22 )

[node name="ending_5" type="AudioStreamPlayer" parent="soundtrack"]
stream = ExtResource( 18 )

[node name="sfx" type="Node" parent="soundtrack"]

[node name="good_answer" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 25 )

[node name="bad_answer" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 24 )

[node name="rumble_effect" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 26 )
volume_db = -5.0
pitch_scale = 0.8

[node name="attack" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 28 )

[node name="shield" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 30 )
volume_db = 5.0
pitch_scale = 1.2

[node name="invincible_defense" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 32 )

[node name="invincible_on" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 29 )

[node name="invincible_off" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 27 )

[node name="hurt" type="AudioStreamPlayer" parent="soundtrack/sfx"]
stream = ExtResource( 31 )
pitch_scale = 0.8

[node name="animation" type="AnimationPlayer" parent="."]
anims/attack_demon = SubResource( 7 )
anims/attack_player = SubResource( 8 )
anims/battle_mode = SubResource( 9 )
anims/invincibility_defense = SubResource( 10 )
[connection signal="pressed" from="interactive/buttons/order/option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="interactive/buttons/order/option2" to="." method="_on_option2_pressed"]
[connection signal="pressed" from="interactive/buttons/order/option3" to="." method="_on_option3_pressed"]
[connection signal="pressed" from="interactive/buttons/order/option4" to="." method="_on_option4_pressed"]
[connection signal="pressed" from="demon/battle_screen/buttons/order/attack" to="demon" method="_on_attack_pressed"]
[connection signal="pressed" from="demon/battle_screen/buttons/order/defend" to="demon" method="_on_defend_pressed"]
[connection signal="pressed" from="demon/battle_screen/buttons/order/invincible" to="demon" method="_on_invincible_pressed"]
[connection signal="animation_finished" from="animation" to="demon" method="_on_animation_finished"]
